Archive2/93/370ec73cf33146/output
main.cpp:8:9: error: assigning to 'en' from incompatible type 'int'
    u.e = 1;
        ^ ~
1 error generated.
