Archive2/93/370ec73cf33146/main.cpp
enum en : int { A, B };

#include <iostream>

int main()
{
    union { en e; int x; } u{};
    u.e = 1;
    std::cout << u.x;
}